# rotman_ncs

./: .gitignore  README.md  portfolio.parquet  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-build.yml  python-publish.yml
ncs/: version.py
ncs/call_strategy/: random_action.csv  random_strategy_portfolio.parquet  random_strategy_portfolio_10d.parquet  random_strategy_portfolio_1d.parquet  random_strategy_portfolio_5d.parquet  spy_action.csv  spy_strategy_portfolio.parquet
ncs/data/: __init__.py  all_stock_price_history.parquet
ncs/data/test/: call_data.parquet  call_statement_data.parquet  stock_return_data.parquet
ncs/data/train/: call_data.parquet  call_statement_data.parquet  stock_return_data.parquet
ncs/model/: inference.py
tests/: teststrategy.py
