[metadata]
name = rotman-ncs
author = Zeyu Colin Wang
author_email = colinzeyu.wang@utoronto.ca
description = UoT Rotman NLP Case Study
version = 0.1.0a7
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/colingwuyu/rotman_ncs.git
classifiers =
    Programming Language :: Python :: 3.8 
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = 
    NLP
    Case Study
    UoT
    UoT Rotman
    Machine Learning
    Investing

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy >= 1.24.4
    unidecode == 1.3.6
    textblob == 0.17.1
    pandas >= 2.0.0
    tqdm >= 4.65.0
    nltk == 3.8.1
    scikit-learn == 1.3.0
    contractions == 0.1.73
    pyarrow >= 12.0.1
    spacy == 3.5.4
    plotly == 5.15.0
    gensim == 4.3.1
    transformers == 4.30.2
    kaleido == 0.2.1
    ipykernel == 6.24.0
    nbformat == 5.9.0

[options.package_data]
ncs = call_strategy/*.csv, call_strategy/*.parquet

[options.packages.find]
where = .

